# libkiwix

./: .codecov.yml  .gitignore  .travis.yml  AUTHORS  COMPILE_ubuntu-16.04.md  ChangeLog  Dockerfile.build  README.md  format_code.sh  kiwix.pc.in  meson.build  meson_options.txt
include/: book.h  bookmark.h  common.h  downloader.h  entry.h  html_dumper.h  i18n.h  indexer.h  kiwix.h  kiwixserve.h  library.h  libxml_dumper.h  manager.h  meson.build  name_mapper.h  opds_catalog.h  opds_dumper.h  reader.h  search_renderer.h  searcher.h  server.h  spelling_correction.h  tools.h  version.h  xapianSearcher.h
include/common/: base64.h  networkTools.h  otherTools.h  pathTools.h  regexTools.h  stringTools.h
include/ctpp2/: CTPP2VMStringLoader.hpp
include/kiwix/: Error.h
include/tools/: archiveTools.h  lock.h  otherTools.h  pathTools.h  regexTools.h  stringTools.h
scripts/: compile_resources.py  ctpp2c.sh  format_code.sh  kiwix-compile-i18n  kiwix-compile-i18n.1  kiwix-compile-resources  kiwix-compile-resources.1  kiwix-resources  meson.build
src/: aria2.cpp  aria2.h  book.cpp  bookmark.cpp  config.h.in  downloader.cpp  entry.cpp  html_dumper.cpp  indexer.cpp  kiwixserve.cpp  library.cpp  library_dumper.cpp  library_dumper.h  libtorrent.cpp  libtorrent.h  libxml_dumper.cpp  libxml_dumper.h  manager.cpp  meson.build  microhttpd_wrapper.h  name_mapper.cpp  opds_catalog.cpp  opds_dumper.cpp  opds_dumper.h  reader.cpp  search_renderer.cpp  searcher.cpp  server.cpp  spelling_correction.cpp  subprocess.cpp  subprocess.h  subprocess_unix.cpp  subprocess_unix.h  subprocess_windows.cpp  subprocess_windows.h  version.cpp  xapianIndexer.cpp  xapianSearcher.cpp  xmlrpc.h
src/android/: book.cpp  filter.cpp  gen_kiwix.sh  kiwix.cpp  kiwixicu.cpp  kiwixlibrary.cpp  kiwixreader.cpp  kiwixsearcher.cpp  kiwixserver.cpp  library.cpp  manager.cpp  meson.build  utils.h
src/common/: base64.cpp  componentTools.cpp  componentTools.h  networkTools.cpp  networkTools.h  otherTools.cpp  otherTools.h  pathTools.cpp  pathTools.h  regexTools.cpp  regexTools.h  resourceTools.cpp  resourceTools.h  splitString.cpp  splitString.h  stringTools.cpp  stringTools.h  unaccent.cpp  unaccent.h
src/common/kiwix/: cluceneIndexer.cpp  cluceneIndexer.h  cluceneSearcher.cpp  cluceneSearcher.h  indexer.cpp  indexer.h  library.cpp  library.h  manager.cpp  manager.h  reader.cpp  reader.h  searcher.cpp  searcher.h  xapianIndexer.cpp  xapianIndexer.h  xapianSearcher.cpp  xapianSearcher.h
src/ctpp2/: CTPP2VMStringLoader.cpp
src/server/: byte_range.cpp  byte_range.h  etag.cpp  etag.h  i18n.cpp  i18n.h  i18n_utils.h  internalServer.cpp  internalServer.h  internalServer_catalog.cpp  internalServer_catalog_v2.cpp  networkTools.cpp  request_context.cpp  request_context.h  response.cpp  response.h
src/tools/: archiveTools.cpp  archiveTools.h  base64.cpp  concurrent_cache.h  languageTools.cpp  lrucache.h  networkTools.cpp  networkTools.h  opdsParsingTools.cpp  otherTools.cpp  otherTools.h  pathTools.cpp  pathTools.h  regexTools.cpp  regexTools.h  stringTools.cpp  stringTools.h
src/wrapper/java/: book.cpp  filter.cpp  kiwixicu.cpp  kiwixreader.cpp  kiwixsearcher.cpp  kiwixserver.cpp  library.cpp  manager.cpp  meson.build  utils.h
src/xapian/: myhtmlparse.h
static/: catalog_entries.xml  catalog_v2_categories.xml  catalog_v2_entries.xml  catalog_v2_root.xml  catalog_v2_searchdescription.xml  contentOpensearchDescription.xml  ft_opensearchdescription.xml  generate_i18n_resources_list.py  i18n_resources_list.txt  meson.build  navigation_feed.tmpl  opensearchdescription.xml  resources_list.txt  results.tmpl  search_result.tmpl  viewer.html
static/i18n/: ar.json  de.json  en.json  fr.json  he.json  hy.json  it.json  ja.json  ku-latn.json  mk.json  nqo.json  pl.json  qqq.json  ru.json  sc.json  sk.json  sv.json  test.json  tr.json  zh-hans.json  zh-hant.json
static/skin/: autoComplete.js  blank.html  block_external.js  categoryList.js  categoryList.json  error.css  home.css  i18n.js  index.css  index.js  iso6391To3.js  isotope.pkgd.min.js  kiwix.css  langList.js  langList.json  languages.js  lib.js  polyfills.js  print.css  search_results.css  taskbar.css  taskbar.js  viewer.js  viewer_taskbar.js  widget.js
static/skin/css/: autoComplete.css
static/skin/favicon/: browserconfig.xml  site.webmanifest
static/skin/i18n/: ar.json  bn.json  br.json  cs.json  dag.json  de.json  dga.json  el.json  en.json  es-formal.json  es.json  fi.json  fr.json  ha.json  he.json  hi.json  hu.json  hy.json  ia.json  id.json  ig.json  it.json  ja.json  ko.json  ku-latn.json  lb.json  mk.json  ms.json  nb.json  nl.json  (+20 more)
static/templates/: 400.html  404.html  500.html  block_external.js  captured_external.html  catalog_entries.xml  catalog_v2_categories.xml  catalog_v2_complete_entry.xml  catalog_v2_entries.xml  catalog_v2_entry.xml  catalog_v2_languages.xml  catalog_v2_partial_entry.xml  catalog_v2_root.xml  error.html  error.xml  external_blocker_part.html  head_part.html  head_taskbar.html  index.html  no_js_download.html  no_js_library_page.html  no_search_result.html  search_result.html  search_result.xml  sexy404.html  sexy500.html  suggestion.json  taskbar_part.html  url_of_search_results_css  viewer_settings.js  widget.html
test/: book.cpp  counterParsing.cpp  httplib.cpp  httplib.h  i18n.cpp  kiwixserve.cpp  languageTools.cpp  library.cpp  library_server.cpp  libtorrent.cpp  lrucache.cpp  manager.cpp  meson.build  name_mapper.cpp  opdsParsingTools.cpp  opds_catalog.cpp  opds_dumper.cpp  otherTools.cpp  parseUrl.cpp  pathTools.cpp  reader.cpp  regex.cpp  response.cpp  searcher.cpp  server.cpp  server_helper.cpp  server_html_search.cpp  server_search.cpp  server_testing_tools.h  server_xml_search.cpp  spelling_correction.cpp  stringTools.cpp  tagParsing.cpp  testing_tools.h
test/data/: corner_cases.zim  create_corner_cases_zim_file  create_zim_file_for_testing_spelling_correction  customized_resources.txt  example.zim  lib_for_server_search_test.xml  library.xml  spelling_correction_test.zim  welcome.html  zimfile_raycharles.zim
(+288 files in other folders)
