headers = [
  'book.h',
  'bookmark.h',
  'common.h',
  'library.h',
  'manager.h',
  'libxml_dumper.h',
  'opds_dumper.h',
  'downloader.h',
  'reader.h',
  'entry.h',
  'searcher.h',
  'search_renderer.h',
  'server.h',
  'kiwixserve.h',
  'name_mapper.h'
]

install_headers(headers, subdir:'kiwix')

install_headers(
  'tools/base64.h',
  'tools/networkTools.h',
  'tools/otherTools.h',
  'tools/pathTools.h',
  'tools/regexTools.h',
  'tools/stringTools.h',
  subdir:'kiwix/tools'
)

