headers = [
  'book.h',
  'bookmark.h',
  'common.h',
  'library.h',
  'manager.h',
  'libxml_dumper.h',
  'opds_dumper.h',
  'downloader.h',
  'reader.h',
  'entry.h',
  'searcher.h',
  'search_renderer.h',
  'server.h',
  'kiwixserve.h',
  'name_mapper.h',
  'tools.h',
  'version.h'
]

install_headers(headers, subdir:'kiwix')
