
res_compiler = find_program('kiwix-compile-resources')

install_data(res_compiler.path(), install_dir:get_option('bindir'))

install_man('kiwix-compile-resources.1')

i18n_compiler = find_program('kiwix-compile-i18n')

install_data(i18n_compiler.path(), install_dir:get_option('bindir'))

install_man('kiwix-compile-i18n.1')
